long tab metrics and some hardcode calcs

--- a/html/app_monetization_metrics_header.html
+++ b/html/app_monetization_metrics_header.html
@@ -23,6 +23,9 @@
             Charge cr, %
         </th>
         <th class="highlight-#eae6ff confluenceTd" data-highlight-colour="#eae6ff" bgcolor="#eae6ff">
+            Trials share, %
+        </th>
+        <th class="highlight-#eae6ff confluenceTd" data-highlight-colour="#eae6ff" bgcolor="#eae6ff">
             Trial -> charge, %
         </th>
         <th class="highlight-#eae6ff confluenceTd" data-highlight-colour="#eae6ff" bgcolor="#eae6ff">
