--- a/html/app_monetization_metrics_row.html
+++ b/html/app_monetization_metrics_row.html
@@ -7,6 +7,7 @@
     <td style="text-align: right;" {arppu_color}>{arppu}</td>
     <td style="text-align: right;" {access cr, %_color}>{access cr, %}</td>
     <td style="text-align: right;" {charge cr, %_color}>{charge cr, %}</td>
+    <td style="text-align: right;" {trial share, %_color}>{trial share, %}</td>
     <td style="text-align: right;" {trial -> charge, %_color}>{trial -> charge, %}</td>
     <td style="text-align: right;" {charge -> 14d cancel, %_color}>{charge -> 14d cancel, %}</td>
     <td style="text-align: right;" {charge -> 14d refund, %_color}>{charge -> 14d refund, %}</td>
