--- a/html/long_tab_view_metrics_header.html
+++ b/html/long_tab_view_metrics_header.html
@@ -1,5 +1,5 @@
 <p class="auto-cursor-target">
-<strong>Long Tab View Metrics</strong>
+<strong>Tab View Metrics</strong>
 </p>
 <table>
     <tbody class="">
@@ -21,6 +21,24 @@
         </th>
         <th class="highlight-#eae6ff confluenceTd" data-highlight-colour="#eae6ff" bgcolor="#eae6ff">
             Tab View 600s, %
+        </th>
+        <th class="highlight-#eae6ff confluenceTd" data-highlight-colour="#eae6ff" bgcolor="#eae6ff">
+            Tab View per user
+        </th>
+        <th class="highlight-#eae6ff confluenceTd" data-highlight-colour="#eae6ff" bgcolor="#eae6ff">
+            Tab View 60s per user
+        </th>
+        <th class="highlight-#eae6ff confluenceTd" data-highlight-colour="#eae6ff" bgcolor="#eae6ff">
+            Tab View 120s per user
+        </th>
+        <th class="highlight-#eae6ff confluenceTd" data-highlight-colour="#eae6ff" bgcolor="#eae6ff">
+            Tab View 180s per user
+        </th>
+        <th class="highlight-#eae6ff confluenceTd" data-highlight-colour="#eae6ff" bgcolor="#eae6ff">
+            Tab View 300s per user
+        </th>
+        <th class="highlight-#eae6ff confluenceTd" data-highlight-colour="#eae6ff" bgcolor="#eae6ff">
+            Tab View 600s per user
         </th>
     </tr>
     {rows}
