--- a/html/app_monetization_metrics_row.html
+++ b/html/app_monetization_metrics_row.html
@@ -3,6 +3,7 @@
         {variation}
     </th>
     <td style="text-align: right;" {arpu_color}>{arpu}</td>
+    <td style="text-align: right;" {lifetime_arpu_color}>{lifetime_arpu}</td>
     <td style="text-align: right;" {aov_color}>{aov}</td>
     <td style="text-align: right;" {arppu_color}>{arppu}</td>
     <td style="text-align: right;" {access cr, %_color}>{access cr, %}</td>
