--- a/html/app_monetization_stats_header.html
+++ b/html/app_monetization_stats_header.html
@@ -38,6 +38,9 @@
             Revenue
         </th>
         <th class="highlight-#eae6ff confluenceTd" data-highlight-colour="#eae6ff" bgcolor="#eae6ff">
+            LT Revenue
+        </th>
+        <th class="highlight-#eae6ff confluenceTd" data-highlight-colour="#eae6ff" bgcolor="#eae6ff">
             Cancels 14d
         </th>
         <th class="highlight-#eae6ff confluenceTd" data-highlight-colour="#eae6ff" bgcolor="#eae6ff">
