--- a/html/app_monetization_stats_row.html
+++ b/html/app_monetization_stats_row.html
@@ -12,6 +12,7 @@
     <td style="text-align: right;">{buyers}</td>
     <td style="text-align: right;">{charges}</td>
     <td style="text-align: right;">{revenue}</td>
+    <td style="text-align: right;">{lifetime_revenue}</td>
     <td style="text-align: right;">{cancels_14d}</td>
     <td style="text-align: right;">{refunds_14d}</td>
 </tr>
