refactored config dicts

--- a/html/app_monetization_metrics_header.html
+++ b/html/app_monetization_metrics_header.html
@@ -20,6 +20,9 @@
             ARPPU
         </th>
         <th class="highlight-#eae6ff confluenceTd" data-highlight-colour="#eae6ff" bgcolor="#eae6ff">
+            Install cr, %
+        </th>
+        <th class="highlight-#eae6ff confluenceTd" data-highlight-colour="#eae6ff" bgcolor="#eae6ff">
             Access cr, %
         </th>
         <th class="highlight-#eae6ff confluenceTd" data-highlight-colour="#eae6ff" bgcolor="#eae6ff">
