--- a/html/app_monetization_metrics_row.html
+++ b/html/app_monetization_metrics_row.html
@@ -6,6 +6,7 @@
     <td style="text-align: right;" {lifetime_arpu_color}>{lifetime_arpu}</td>
     <td style="text-align: right;" {aov_color}>{aov}</td>
     <td style="text-align: right;" {arppu_color}>{arppu}</td>
+    <td style="text-align: right;" {install cr, %_color}>{install cr, %}</td>
     <td style="text-align: right;" {access cr, %_color}>{access cr, %}</td>
     <td style="text-align: right;" {charge cr, %_color}>{charge cr, %}</td>
     <td style="text-align: right;" {trial share, %_color}>{trial share, %}</td>
