--- a/html/app_monetization_stats_header.html
+++ b/html/app_monetization_stats_header.html
@@ -11,6 +11,9 @@
             Members
         </th>
         <th class="highlight-#eae6ff confluenceTd" data-highlight-colour="#eae6ff" bgcolor="#eae6ff">
+            Installs
+        </th>
+        <th class="highlight-#eae6ff confluenceTd" data-highlight-colour="#eae6ff" bgcolor="#eae6ff">
             Subscribers
         </th>
         <th class="highlight-#eae6ff confluenceTd" data-highlight-colour="#eae6ff" bgcolor="#eae6ff">
