--- a/html/app_monetization_stats_row.html
+++ b/html/app_monetization_stats_row.html
@@ -3,6 +3,7 @@
         {variation}
     </th>
     <td style="text-align: right;">{members}</td>
+    <td style="text-align: right;">{installs}</td>
     <td style="text-align: right;">{subscribers}</td>
     <td style="text-align: right;">{accesses}</td>
     <td style="text-align: right;">{instants}</td>
